este es el tercer commit ahora con imagen

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
         <td>14:00-15:00</td>
         <td class="Proyecto">Proyecto intermodular</td>
       </tr>
+
     </tbody>
   </table>
+  <img src="Imagenes/54045169500_ed58c1637a_o.jpg" alt="Imagen de Ejemplo">
 </body>
 </html>
